--- a/WEBSCRAPING, CLEANING AND ANALYSIS FOR HIGHEST GROSSING FILMS.ipynb
+++ b/WEBSCRAPING, CLEANING AND ANALYSIS FOR HIGHEST GROSSING FILMS.ipynb
@@ -2008,7 +2008,10 @@
    "id": "8d044a63",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Export file as as csv file\n",
+    "movies_data.to_csv(\"Movies Data\")"
+   ]
   },
   {
    "cell_type": "code",
